# DuetOS ACPI table walker.
#
# Production crate. RSDP v1/v2 + ACPI table-header + MADT entry
# walker + FADT body decoder + MCFG entry + HPET + SRAT memory-
# affinity decoders. C++ caller at `kernel/acpi/acpi.cpp`
# delegates byte parsing to this crate; AML execution and XSDT
# /RSDT walks stay in C++.
#
# Spec: ACPI 6.5 (UEFI Forum). Linked from
# `wiki/kernel/ACPI.md`.

[package]
name = "duetos_acpi"
version = "0.0.1"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "DuetOS ACPI table walker"

[lib]
name = "duetos_acpi"
crate-type = ["rlib"]

[lints]
workspace = true
