# DuetFS — DuetOS native filesystem (v0).
#
# Clean-room rewrite inspired by RedoxFS (https://github.com/redox-os/redoxfs,
# MIT). The v0 on-disk layout is intentionally a small subset — fixed
# 256 B nodes, linear extents, no CoW, no encryption — chosen so the
# first Rust subsystem to land in DuetOS proves the FFI / build / VFS
# plumbing end-to-end without dragging in aes-xts / argon2 / lz4 on
# day one. The format will diverge further from RedoxFS as DuetFS
# evolves; the lineage stays in this comment so future readers can
# follow the prior art without digging.
#
# Rules (see wiki/reference/Roadmap.md "Rust bring-up"):
#   - no_std  — kernel can't bring in libstd.
#   - panic = abort — kernel can't unwind.
#   - core + alloc only — every other dep is a future slice's PR.
#   - exposes a narrow C FFI (include/duetfs.h, hand-written) that
#     the C++ kernel side calls; no Rust appears in the middle of a
#     C++ call chain.

[package]
name    = "duetfs"
version = "0.0.1"
edition = "2021"
publish = false
license = "MIT"
description = "DuetOS native filesystem (v0). Clean-room rewrite inspired by RedoxFS."

[lib]
name       = "duetfs"
crate-type = ["staticlib"]

[profile.release]
panic       = "abort"
lto         = "thin"
opt-level   = "z"
codegen-units = 1
strip       = true
overflow-checks = true

[profile.dev]
panic           = "abort"
opt-level       = 1
overflow-checks = true
debug           = true

# Crypto deps — added in the v6 encryption slice.
#   aes        — pure-Rust AES-128/256 block cipher (no_std).
#   xts-mode   — XTS-mode wrapper for AES (no_std).
#   argon2     — Argon2id password-based KDF (no_std + alloc).
# All three ride on the cipher / digest / blake2 stack and stay
# no_std + alloc, matching the crate's existing freestanding shape.

[dependencies]
aes        = { version = "0.8", default-features = false }
xts-mode   = { version = "0.5", default-features = false }
argon2     = { version = "0.5", default-features = false, features = ["alloc"] }
# LZ4 — pure-Rust block-format compress / decompress (no_std). Used
# for the v7 file-payload compression path; the in-memory layout is
# the standard LZ4 frame so external tools can decompress as-is.
lz4_flex   = { version = "0.11", default-features = false }
