# DuetOS exFAT metadata walker.
#
# Production crate. Boot-sector probe + FAT chain walker + dirent
# decoder (File 0x85 + Stream-Extension 0xC0 + FileName 0xC1
# tuples). C++ caller at `kernel/fs/exfat.cpp` delegates byte
# parsing here; UTF-16 → ASCII translation stays in C++.
#
# Spec: Microsoft exFAT File System Specification (1.00, Aug 2019).

[package]
name = "duetos_exfat"
version = "0.0.1"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "DuetOS exFAT metadata walker"

[lib]
name = "duetos_exfat"
crate-type = ["rlib"]

[lints]
workspace = true
