# DuetOS ext4 metadata walker — skeleton.
#
# Foundation crate for an eventual read-only ext4 driver. v0
# ships only the superblock magic + block/inode layout extraction;
# the inode table, directory-entry walker, extent tree, and HTREE
# index are tracked in `wiki/filesystem/ext4.md` as next slices.
#
# Status: SKELETON. No C++ caller — DuetOS ships only FAT32 +
# DuetFS today; the Linux subsystem doesn't currently touch ext4.
#
# Spec: https://www.kernel.org/doc/html/latest/filesystems/ext4/

[package]
name = "duetos_ext4"
version = "0.0.1"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "DuetOS ext4 metadata walker (skeleton)"

[lib]
name = "duetos_ext4"
crate-type = ["rlib"]

[lints]
workspace = true
