# DuetOS ext4 metadata walker.
#
# Production crate. Superblock probe + group-descriptor + inode +
# extent-header + extent-leaf/index + linux_dirent decoders. C++
# caller at `kernel/fs/ext4.cpp` delegates byte parsing here.
#
# Spec: https://www.kernel.org/doc/html/latest/filesystems/ext4/

[package]
name = "duetos_ext4"
version = "0.0.1"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "DuetOS ext4 metadata walker"

[lib]
name = "duetos_ext4"
crate-type = ["rlib"]

[lints]
workspace = true
