# DuetOS NTFS metadata walker.
#
# Production crate. Boot-sector probe + $MFT record header decode +
# resident $FILE_NAME attribute walk + runlist (mapping-pairs)
# decode for non-resident attributes. C++ caller at
# `kernel/fs/ntfs.cpp` delegates byte-parsing to this crate; UTF-16
# → ASCII translation stays in C++ (it draws on the project's
# `util::Utf16CpToSafeAscii`).
#
# Spec: ECMA-167 / Microsoft NTFS. v0 targets the on-disk format
# documented at https://flatcap.github.io/linux-ntfs/ntfs/.

[package]
name = "duetos_ntfs"
version = "0.0.1"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "DuetOS NTFS metadata walker"

[lib]
name = "duetos_ntfs"
crate-type = ["rlib"]

[lints]
workspace = true
