# DuetOS Bluetooth HCI walker.
#
# Production crate. HCI event-packet header + Command Complete,
# Command Status, Disconnection Complete, LE Meta, Read_Local_
# Version and Read_BD_ADDR body decoders. C++ side at
# `kernel/net/bluetooth/hci.cpp` calls into this crate.
#
# Spec: Bluetooth Core 5.4, Vol 4 (Host Controller Interface).

[package]
name = "duetos_hci"
version = "0.0.1"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "DuetOS Bluetooth HCI walker"

[lib]
name = "duetos_hci"
crate-type = ["rlib"]

[lints]
workspace = true
