# DuetOS TLS 1.2 record + handshake parser for DuetOS.
#
# Parses untrusted TLS 1.2 record-layer and handshake-layer byte
# streams arriving from a server peer. Remote peers control
# packet lengths, header offsets, session-id lengths, certificate-
# list / per-cert length prefixes, and extension-list lengths —
# Rust-Subsystems P0 surface (network packet parsers, remotely
# reachable before auth).
#
# Standalone no_std rlib; exposes a narrow C ABI consumed by
# kernel/net/tls.cpp. The C++ side keeps the AES-GCM record
# crypto, RSA pre-master encryption, PRF, transcript hash, and
# the connection lifecycle.

[package]
name = "duetos_tls"
version = "0.0.1"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "DuetOS TLS 1.2 record + handshake parser"

[lib]
name = "duetos_tls"
crate-type = ["rlib"]

[lints]
workspace = true
