# DuetOS 802.11 management-frame walker.
#
# Production crate. Frame-control decode + IE-list walker + Beacon /
# Probe Response body decoder + EAPOL-Key (4-way handshake)
# descriptor parser. The C++ MLME at `kernel/net/wireless/` calls
# this crate's FFI symbols.
#
# Spec: IEEE 802.11-2020 (frame format §9.2) + IEEE 802.1X-2010
# (EAPOL §11.4).

[package]
name = "duetos_wifi80211"
version = "0.0.1"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "DuetOS IEEE 802.11 management-frame walker"

[lib]
name = "duetos_wifi80211"
crate-type = ["rlib"]

[lints]
workspace = true
